drug_design_update

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 src/drug_design/data/building_blocks/*.sdf
 src/drug_design/data/building_blocks/*.txt
 src/drug_design/data/building_blocks/*.pkl
+src/drug_design/data/building_blocks/*.csv
 results*
 *.pyc
 *.pyo
